minidump-stackwalk/tests/snapshots/test_minidump_stackwalk__human-brief.snap
---
source: minidump-stackwalk/tests/test-minidump-stackwalk.rs
expression: stdout
---
Operating system: Windows NT
                  5.1.2600 Service Pack 2
CPU: x86
     GenuineIntel family 6 model 13 stepping 8
     1 CPU

Crash reason:  EXCEPTION_ACCESS_VIOLATION_WRITE
Crash address: 0x00000045
Process uptime: 0 seconds

Memory map count: 0

Thread 0  (crashed) - tid: 3060
 0  test_app.exe + 0x429e
     eip = 0x0040429e    esp = 0x0012fe84    ebp = 0x0012fe88    ebx = 0x7c80abc1
     esi = 0x00000002    edi = 0x00000a28    eax = 0x00000045    ecx = 0x0012fe94
     edx = 0x0042bc58 eflags = 0x00010246
    Found by: given as instruction pointer in context
 1  test_app.exe + 0x41ff
     eip = 0x00404200    esp = 0x0012fe90    ebp = 0x0012ff70
    Found by: previous frame's frame pointer
 2  test_app.exe + 0x53eb
     eip = 0x004053ec    esp = 0x0012ff78    ebp = 0x0012ffc0
    Found by: previous frame's frame pointer
 3  kernel32.dll + 0x16fd6
     eip = 0x7c816fd7    esp = 0x0012ffc8    ebp = 0x0012fff0
    Found by: previous frame's frame pointer
