minidump-stackwalk/tests/snapshots/test_minidump_stackwalk__json-pretty-evil-symbols.snap
---
source: minidump-stackwalk/tests/test-minidump-stackwalk.rs
expression: stdout
---
{
  "crash_info": {
    "address": "0x00000045",
    "adjusted_address": null,
    "assertion": null,
    "crash_inconsistencies": [],
    "crashing_thread": 0,
    "instruction": null,
    "instruction_pointer_update": null,
    "memory_accesses": null,
    "possible_bit_flips": null,
    "type": "EXCEPTION_ACCESS_VIOLATION_WRITE"
  },
  "crashing_thread": {
    "frame_count": 4,
    "frames": [
      {
        "file": "c:\\test_app.cc",
        "frame": 0,
        "function": "`anonymous namespace'::CrashFunction",
        "function_offset": "0x0000000e",
        "inlines": null,
        "line": 58,
        "missing_symbols": false,
        "module": "test_app.exe",
        "module_offset": "0x0000429e",
        "offset": "0x0040429e",
        "registers": {
          "eax": "0x00000045",
          "ebp": "0x0012fe88",
          "ebx": "0x7c80abc1",
          "ecx": "0x0012fe94",
          "edi": "0x00000a28",
          "edx": "0x0042bc58",
          "eflags": "0x00010246",
          "eip": "0x0040429e",
          "esi": "0x00000002",
          "esp": "0x0012fe84"
        },
        "trust": "context",
        "unloaded_modules": null
      },
      {
        "file": "c:\\test_app.cc",
        "frame": 1,
        "function": "main",
        "function_offset": "0x0000004f",
        "inlines": null,
        "line": 65,
        "missing_symbols": false,
        "module": "test_app.exe",
        "module_offset": "0x000041ff",
        "offset": "0x004041ff",
        "trust": "cfi",
        "unloaded_modules": null
      },
      {
        "file": "f:\\sp\\vctools\\crt_bld\\self_x86\\crt\\src\\crt0.c",
        "frame": 2,
        "function": "__tmainCRTStartup",
        "function_offset": "0x0000015e",
        "inlines": null,
        "line": 327,
        "missing_symbols": false,
        "module": "test_app.exe",
        "module_offset": "0x000053eb",
        "offset": "0x004053eb",
        "trust": "cfi",
        "unloaded_modules": null
      },
      {
        "file": null,
        "frame": 3,
        "function": null,
        "function_offset": null,
        "inlines": null,
        "line": null,
        "missing_symbols": true,
        "module": "kernel32.dll",
        "module_offset": "0x00016fd6",
        "offset": "0x7c816fd6",
        "trust": "cfi",
        "unloaded_modules": null
      }
    ],
    "last_error_value": null,
    "thread_id": 3060,
    "thread_name": null,
    "threads_index": 0
  },
  "crashpad_info": null,
  "handles": null,
  "linux_memory_map_count": null,
  "lsb_release": null,
  "mac_boot_args": null,
  "mac_crash_info": null,
  "main_module": 0,
  "modules": [
    {
      "base_addr": "0x00400000",
      "cert_subject": "rust-minidump",
      "code_id": "45d35f6c2d000",
      "corrupt_symbols": false,
      "debug_file": "test_app.pdb",
      "debug_id": "5A9832E5287241C1838ED98914E9B7FF1",
      "end_addr": "0x0042d000",
      "filename": "test_app.exe",
      "loaded_symbols": true,
      "missing_symbols": false,
      "symbol_url": null,
      "version": null
    },
    {
      "base_addr": "0x7c900000",
      "cert_subject": null,
      "code_id": "411096b4b0000",
      "corrupt_symbols": false,
      "debug_file": "ntdll.pdb",
      "debug_id": "36515FB5D04345E491F672FA2E2878C02",
      "end_addr": "0x7c9b0000",
      "filename": "ntdll.dll",
      "loaded_symbols": false,
      "missing_symbols": false,
      "symbol_url": null,
      "version": "5.1.2600.2180"
    },
    {
      "base_addr": "0x7c800000",
      "cert_subject": null,
      "code_id": "44ab9a84f4000",
      "corrupt_symbols": false,
      "debug_file": "kernel32.pdb",
      "debug_id": "BCE8785C57B44245A669896B6A19B9542",
      "end_addr": "0x7c8f4000",
      "filename": "kernel32.dll",
      "loaded_symbols": false,
      "missing_symbols": true,
      "symbol_url": null,
      "version": "5.1.2600.2945"
    },
    {
      "base_addr": "0x774e0000",
      "cert_subject": null,
      "code_id": "42e5be9313d000",
      "corrupt_symbols": false,
      "debug_file": "ole32.pdb",
      "debug_id": "683B65B246F4418796D2EE6D4C55EB112",
      "end_addr": "0x7761d000",
      "filename": "ole32.dll",
      "loaded_symbols": false,
      "missing_symbols": false,
      "symbol_url": null,
      "version": "5.1.2600.2726"
    },
    {
      "base_addr": "0x77dd0000",
      "cert_subject": null,
      "code_id": "411096a79b000",
      "corrupt_symbols": false,
      "debug_file": "advapi32.pdb",
      "debug_id": "455D6C5F184D45BBB5C5F30F829751142",
      "end_addr": "0x77e6b000",
      "filename": "advapi32.dll",
      "loaded_symbols": false,
      "missing_symbols": false,
      "symbol_url": null,
      "version": "5.1.2600.2180"
    },
    {
      "base_addr": "0x77e70000",
      "cert_subject": null,
      "code_id": "411096ae91000",
      "corrupt_symbols": false,
      "debug_file": "rpcrt4.pdb",
      "debug_id": "BEA45A721DA141DAA3BA86B3A20311532",
      "end_addr": "0x77f01000",
      "filename": "rpcrt4.dll",
      "loaded_symbols": false,
      "missing_symbols": false,
      "symbol_url": null,
      "version": "5.1.2600.2180"
    },
    {
      "base_addr": "0x77f10000",
      "cert_subject": null,
      "code_id": "43b34feb47000",
      "corrupt_symbols": false,
      "debug_file": "gdi32.pdb",
      "debug_id": "C0EA66BE00A64BD7AEF79E443A91869C2",
      "end_addr": "0x77f57000",
      "filename": "gdi32.dll",
      "loaded_symbols": false,
      "missing_symbols": false,
      "symbol_url": null,
      "version": "5.1.2600.2818"
    },
    {
      "base_addr": "0x77d40000",
      "cert_subject": null,
      "code_id": "4226015990000",
      "corrupt_symbols": false,
      "debug_file": "user32.pdb",
      "debug_id": "EE2B714D83A34C9D88027621272F83262",
      "end_addr": "0x77dd0000",
      "filename": "user32.dll",
      "loaded_symbols": false,
      "missing_symbols": false,
      "symbol_url": null,
      "version": "5.1.2600.2622"
    },
    {
      "base_addr": "0x77c10000",
      "cert_subject": null,
      "code_id": "4110975258000",
      "corrupt_symbols": false,
      "debug_file": "msvcrt.pdb",
      "debug_id": "A678F3C30DED426B839032B996987E381",
      "end_addr": "0x77c68000",
      "filename": "msvcrt.dll",
      "loaded_symbols": false,
      "missing_symbols": false,
      "symbol_url": null,
      "version": "7.0.2600.2180"
    },
    {
      "base_addr": "0x76390000",
      "cert_subject": null,
      "code_id": "411096ae1d000",
      "corrupt_symbols": false,
      "debug_file": "imm32.pdb",
      "debug_id": "2C17A49C251B4C8EB9E2AD13D7D9EA162",
      "end_addr": "0x763ad000",
      "filename": "imm32.dll",
      "loaded_symbols": false,
      "missing_symbols": false,
      "symbol_url": null,
      "version": "5.1.2600.2180"
    },
    {
      "base_addr": "0x59a60000",
      "cert_subject": null,
      "code_id": "4110969aa1000",
      "corrupt_symbols": false,
      "debug_file": "dbghelp.pdb",
      "debug_id": "39559573E21B46F28E286923BE9E6A761",
      "end_addr": "0x59b01000",
      "filename": "dbghelp.dll",
      "loaded_symbols": false,
      "missing_symbols": false,
      "symbol_url": null,
      "version": "5.1.2600.2180"
    },
    {
      "base_addr": "0x77c00000",
      "cert_subject": null,
      "code_id": "411096b78000",
      "corrupt_symbols": false,
      "debug_file": "version.pdb",
      "debug_id": "180A90C40384463E82DDC45B2C8AB76E2",
      "end_addr": "0x77c08000",
      "filename": "version.dll",
      "loaded_symbols": false,
      "missing_symbols": false,
      "symbol_url": null,
      "version": "5.1.2600.2180"
    },
    {
      "base_addr": "0x76bf0000",
      "cert_subject": null,
      "code_id": "411096cab000",
      "corrupt_symbols": false,
      "debug_file": "psapi.pdb",
      "debug_id": "A5C3A1F9689F43D8AD228A09293889702",
      "end_addr": "0x76bfb000",
      "filename": "psapi.dll",
      "loaded_symbols": false,
      "missing_symbols": false,
      "symbol_url": null,
      "version": "5.1.2600.2180"
    }
  ],
  "modules_contains_cert_info": true,
  "pid": 3932,
  "proc_limits": null,
  "process_uptime": 0,
  "soft_errors": null,
  "status": "OK",
  "system_info": {
    "cpu_arch": "x86",
    "cpu_count": 1,
    "cpu_info": "GenuineIntel family 6 model 13 stepping 8",
    "cpu_microcode_version": null,
    "os": "Windows NT",
    "os_ver": "5.1.2600 Service Pack 2"
  },
  "thread_count": 2,
  "threads": [
    {
      "frame_count": 4,
      "frames": [
        {
          "file": "c:\\test_app.cc",
          "frame": 0,
          "function": "`anonymous namespace'::CrashFunction",
          "function_offset": "0x0000000e",
          "inlines": null,
          "line": 58,
          "missing_symbols": false,
          "module": "test_app.exe",
          "module_offset": "0x0000429e",
          "offset": "0x0040429e",
          "trust": "context",
          "unloaded_modules": null
        },
        {
          "file": "c:\\test_app.cc",
          "frame": 1,
          "function": "main",
          "function_offset": "0x0000004f",
          "inlines": null,
          "line": 65,
          "missing_symbols": false,
          "module": "test_app.exe",
          "module_offset": "0x000041ff",
          "offset": "0x004041ff",
          "trust": "cfi",
          "unloaded_modules": null
        },
        {
          "file": "f:\\sp\\vctools\\crt_bld\\self_x86\\crt\\src\\crt0.c",
          "frame": 2,
          "function": "__tmainCRTStartup",
          "function_offset": "0x0000015e",
          "inlines": null,
          "line": 327,
          "missing_symbols": false,
          "module": "test_app.exe",
          "module_offset": "0x000053eb",
          "offset": "0x004053eb",
          "trust": "cfi",
          "unloaded_modules": null
        },
        {
          "file": null,
          "frame": 3,
          "function": null,
          "function_offset": null,
          "inlines": null,
          "line": null,
          "missing_symbols": true,
          "module": "kernel32.dll",
          "module_offset": "0x00016fd6",
          "offset": "0x7c816fd6",
          "trust": "cfi",
          "unloaded_modules": null
        }
      ],
      "last_error_value": null,
      "thread_id": 3060,
      "thread_name": null
    },
    {
      "frame_count": 0,
      "frames": [],
      "last_error_value": null,
      "thread_id": 4544,
      "thread_name": null
    }
  ],
  "unloaded_modules": []
}
